# athena

./: .env.example  .gitignore  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LAUNCH_PLAN.md  Makefile  README.md  REVISED_LAUNCH_PLAN.md  WORLDCLASS_PLAN.md  broadplan.md  docker-compose.yml  pyproject.toml  userplan.md
.github/workflows/: ci.yml  eval.yml  release.yml
athena_verify/: __init__.py  calibration.py  cli.py  core.py  llm_judge.py  models.py  nli.py  overlap.py  parser.py
athena_verify/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py  llamaindex.py
backend/: Dockerfile  alembic.ini  mcp_server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_eval_status.py  003_research_sessions.py  004_span_tracking.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: analyst.py  fact_checker.py  graph.py  llm.py  researcher.py  state.py  supervisor.py  verifier_node.py  writer.py
backend/app/api/: deps.py  middleware.py  routes.py  tenant_routes.py  widget_routes.py
backend/app/generation/: chain.py  prompts.py
backend/app/graph/: extractor.py  models.py  store.py
backend/app/ingestion/: chunker.py  crawler.py  embedder.py  loader.py
backend/app/mcp/: _store_ref.py  server.py
backend/app/models/: orm.py  schemas.py
backend/app/observability/: logging.py  metrics.py
backend/app/retrieval/: bm25_search.py  graph_search.py  hybrid.py  reranker.py  vector_search.py
backend/app/services/: cache.py  document_service.py  retrieval_service.py
backend/app/verification/: __init__.py  models.py  nli.py  parser.py  verifier.py
backend/eval/: runner.py
backend/eval/data/: legalbench_sample.jsonl  sample_contract.txt
backend/eval/datasets/: sample_qa.json
backend/eval/legalbench/: __init__.py  loader.py  runner.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_integration.py  test_auth_middleware.py  test_chunker.py  test_graph_extractor.py  test_loader.py  test_mcp_tools.py  test_retrieval.py  test_tenant_isolation.py
benchmarks/: RESULTS.md  run_baselines.py  run_factscore.py  run_faithbench.py  run_full_eval.py  run_halueval.py  run_hybrid_eval.py  run_ragtruth.py
datasets/: fastapi_tutorial.html  postgresql_indexes.html  python312_whatsnew.html  rag_wikipedia.html
docs/: BLOG_POSTS.md  architecture.md  blog_post.md  models.md  reddit_localllama.md  security.md  show_hn.md  tuning.md
examples/: agent_circuit_breaker.py  athena_verify_demo.ipynb  langchain_example.py  llamaindex_example.py  quickstart.py  requirements.txt
k8s/: configmap.yaml  ingress.yaml  kustomization.yaml
k8s/backend/: deployment.yaml  service.yaml
k8s/postgres/: service.yaml  statefulset.yaml
k8s/redis/: deployment.yaml  service.yaml
plans/: STRATEGY.md  review.md  roadmap.md
streamlit_app/: app.py  requirements.txt
streamlit_app/components/: __init__.py  source_viewer.py
streamlit_app/pages/: 1_upload.py  2_search.py  3_evaluate.py  3_verified_query.py
tests/: test_calibration.py  test_integrations.py  test_new_features.py  test_nli.py  test_overlap.py  test_parser.py  test_supporting_spans.py  test_verify.py
widget/: build.mjs  demo.html  package.json
widget/src/: types.ts  widget.ts
widget/styles/: widget.css
