[project]
name = "athena-verify"
version = "0.1.0"
description = "Open-source runtime guardrail that catches RAG hallucinations sentence-by-sentence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Rahul Modugula"},
]
keywords = ["rag", "hallucination", "verification", "nli", "guardrail", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.9.0",
    "structlog>=24.0.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
nli = [
    "sentence-transformers>=3.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
langchain = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
]
llamaindex = [
    "llama-index>=0.10.0",
]
langgraph = [
    "langgraph>=0.2.0",
]
crewai = [
    "crewai>=0.1.0",
]
all = [
    "athena-verify[nli,llm,langchain,llamaindex,langgraph,crewai]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
athena-verify = "athena_verify.cli:main"

[project.urls]
Homepage = "https://github.com/RahulModugula/athena"
Repository = "https://github.com/RahulModugula/athena"
Issues = "https://github.com/RahulModugula/athena/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athena_verify"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501"]
"athena_verify/llm_judge.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "openai.*",
    "anthropic.*",
    "nltk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
